--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "highlight.js": "^11.6.0",
+    "marked": "^4.1.1",
+    "monaco-editor": "^0.34.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
