--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.4",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
