--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "highlight.js": "^11.6.0",
     "marked": "^4.1.1",
     "monaco-editor": "^0.34.0",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "naive-ui": "^2.33.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
