--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.1.3",
     "highlight.js": "^11.6.0",
-    "marked": "^4.1.1",
-    "monaco-editor": "^0.34.0",
+    "markdown-it": "^13.0.1",
+    "monaco-editor": "^0.34.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
