--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.1.3",
     "highlight.js": "^11.6.0",
+    "jsencrypt": "^3.3.2",
     "markdown-it": "^13.0.1",
     "monaco-editor": "^0.34.1",
     "normalize.css": "^8.0.1",
